k8s/flask-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: <repo-name>/<image-name>:<image-version>
        imagePullPolicy: Never
        ports:
        - containerPort:  5555
