k8s/flask-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name:  app-srv
spec:
  selector:
    app:  app
  type:  ClusterIP
  ports:
  - protocol: TCP
    port:  5555
    targetPort:  5555
