k8s/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: apis
  annotations:
    kubernetes.io/ingress.class: nginx
    spec.ingressClassName: nginx
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flask-clusterip
            port:
              number: 5555
